<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dal_csci3130.course_registration.CourseDetails">

    <TextView
        android:id="@+id/textView"
        android:layout_width="309dp"
        android:layout_height="339dp"
        android:layout_marginTop="44dp"
        android:text=""
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        android:onClick="addClass"
        android:text="Add"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/notice"
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applyButton" />


</android.support.constraint.ConstraintLayout>

